--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Facebook</title>
+	<link rel="icon"  href="imeges/Facebook_icon.jpg">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
