--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<input type="text" id="email">
 				</div>
 				<div class="input">
-					<label for="pw">password</label>
+					<label for="pw">Password</label>
 					<input type="text" id="pw">
 					<a href="#">Forgotten account?</a>
 				</div>
