laft_bodydesign_added

--- a/index.html
+++ b/index.html
@@ -34,5 +34,32 @@
 			</div>
 		</div>
 	</header>
+
+	<div class="body">
+		<div class="container">
+			<div class="leftside">
+				<p>Facebook helps you connect and share with the people in your life.</p>
+			<img src="imeges/7XdR1KwCifL.png">
+		</div>
+		<div class="rightside"></div>
+		
+		<form><h1>Create an account</h1>
+		<h4>It's quick and easy.</h4>
+			<div class="firstname"><input type="text" placeholder="First name">
+				<input type="text" placeholder="Last name">
+			</div>
+
+			<div class="body-input">
+			<input type="text" placeholder="Mobile number or email address"></div>
+
+			<div class="body-input"><input type="Password" placeholder="New Password"></div>
+
+			
+			
+		</form>
+		</div>
+	</div>
+
+	<footer></footer>
 </body>
 </html>
